--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "test",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "src/ModelFactory.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "dependencies": {
     "better-sqlite3": "^8.2.0"
