--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "type": "module",
   "homepage": "https://github.com/Thaerious/SQLModelFactory#readme",
   "dependencies": {
+    "@thaerious/logger": "^0.4.1",
+    "better-sqlite-pool": "^0.3.1",
     "better-sqlite3": "^8.2.0"
+  },
+  "devDependencies": {
+    "@thaerious/parseargs": "^0.7.0",
+    "@thaerious/utility": "^0.0.8",
+    "c8": "^7.13.0",
+    "mocha": "^10.2.0"
   }
 }
