--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.1",
   "description": "",
   "main": "src/ModelFactory.js",
-  "scripts": {},
+  "scripts": {
+    "test": "mocha",
+    "coverage": "c8 -r html mocha && node ./test/bin/open.js"
+  },
   "author": "",
   "license": "MIT",
   "type": "module",
   "homepage": "https://github.com/Thaerious/SQLModelFactory#readme",
   "dependencies": {
-    "@thaerious/logger": "^0.4.1",
     "better-sqlite-pool": "^0.3.1",
     "better-sqlite3": "^8.2.0"
   },
@@ -17,6 +19,7 @@
     "@thaerious/parseargs": "^0.7.0",
     "@thaerious/utility": "^0.0.8",
     "c8": "^7.13.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "open": "^9.1.0"
   }
 }
